Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -246,7 +246,7 @@ p {
     padding-right: 0%;
     padding-top: 0%;
     padding-bottom: 0%;
-    min-height: 550px;
+    min-height: 540px;
     background: rgba(49, 60, 75, 0.6);
 }
 #about {
@@ -330,7 +330,7 @@ p {
 }
 #bronze img {
     max-height: 125px;
-    max-width: 275px;
+    max-width: 265px;
     margin-left: 10px;
     margin-right: 10px;
     vertical-align: middle;
@@ -352,12 +352,12 @@ p {
 
 #spacer {
     height: 50vh;
-    min-height: 275px;
+    min-height: 270px;
 }
 #outer-social {
     text-align: center;
     height: 50%;
-    min-height: 275px;
+    min-height: 270px;
 }
 #inner-social {
     top: 80%;
